# airflow-dev

./: .gitignore  billing-airflow  billing-emea-airflow  billing-na-airflow  dev_vars.json  environments.json  flake.nix  pyproject.toml  sync_env  variables.json
environment_dags/whatif/: ninety_nine_dags_and_a_glitch_aint_one.py
nix/: airflow_apps.nix  artifactory.nix  stage_dags.nix
